Archive2/1e/d67c97f558fc56/output
main.cpp:7:13: error: expected expression
    lines = {"HI", "BYE"};
            ^
1 error generated.
