Archive2/1e/d67c97f558fc56/main.cpp
#include <string>

int main( ) {
    
    std::string lines[2];

    lines = {"HI", "BYE"};
}
